# mcp-session-bridge

./: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  admin-viewer.html  pyproject.toml  session-viewer.html
.github/workflows/: tests.yml
app/: __init__.py  admin.py  context_packs.py  main.py  oauth.py  search.py  security.py  session_package.py  session_summaries.py  settings.py  storage.py  time_format.py
deploy/: Caddyfile.mcp-session-bridge  mcp-session-bridge.service
docs/: client-setup.md  deployment.md  installation.md  limitations.md  model-instructions.md  operations.md  project-prompt-template.md  security.md
docs/plans/: 2026-06-24-session-continuity-check-plan.md  2026-06-28-001-feat-session-groups-files-plan.md  2026-06-28-002-feat-last-speaker-continuity-check-plan.md  2026-07-10-001-feat-admin-file-workspace-plan.md
examples/: sample-session.json  sample-session.md  sample-summary.md
scripts/: activate_caddy.py  demo_session.py  session_audit.py  set_owner_password.py
tests/: test_admin.py  test_context_packs.py  test_oauth.py  test_public_onboarding.py  test_search.py  test_security.py  test_sessions.py
