[project]
name = "mcp-session-bridge"
version = "0.1.0"
description = "Auth-first remote MCP spike for shared AI session context."
requires-python = ">=3.12"
dependencies = [
    "mcp[cli]>=1.27.1",
    "python-dotenv>=1.2.0",
    "python-multipart>=0.0.29",
    "pyyaml>=6.0.2",
    "uvicorn>=0.48.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
